Configure Jekyll deployment for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
+---
+layout: null
+permalink: /
+---
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <meta http-equiv="refresh" content="0; url=dual_project_time_visualization_clock_calendar.html">
-    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Countdown Visualization Redirect</title>
   </head>
   <body>
-    <!-- Optional: Add a message for users with older browsers or those who prefer not to be automatically redirected. -->
-    <p>If you are not redirected, <a href="dual_project_time_visualization_clock_calendar.html">click here</a>.</p>
+    <main>
+      <h1>Redirecting to the Countdown Visualization</h1>
+      <p>If your browser does not automatically redirect you, please <a href="dual_project_time_visualization_clock_calendar.html">click here to open the interactive clock and calendar view</a>.</p>
+    </main>
   </body>
 </html>
